adding issue list component

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -4,5 +4,6 @@
   <a routerLink="/edit/5" routerLinkActive="active">Edit Issue</a>
 </nav>
 <router-outlet></router-outlet>
+<issue-list></issue-list>
 
 
