--- a/src/app/issue-list/issue-list.component.html
+++ b/src/app/issue-list/issue-list.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Issue component appeared.
+    Issue list component appeared.
   </h1>
 </div>
 
-
+<issue></issue>
 
