adding issue service and its mock

--- a/src/app/issue-list/issue-list.component.html
+++ b/src/app/issue-list/issue-list.component.html
@@ -5,5 +5,8 @@
   </h1>
 </div>
 
-<issue></issue>
-
+<ul class="issues">
+  <li *ngFor="let issue of issues">
+    <issue [issue]="issue"></issue>
+  </li>
+</ul>
