--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Issue component appeared.
+    {{issue.name}}
+    {{issue.description}}
   </h1>
 </div>
 
