adding new issues to existing list

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,9 +1,10 @@
 <nav>
   <a routerLink="/" routerLinkActive="active">List</a>
   <a routerLink="/add" routerLinkActive="active">Add Issue</a>
-  <a routerLink="/edit/5" routerLinkActive="active">Edit Issue</a>
 </nav>
+
 <router-outlet></router-outlet>
+
+<add-issue></add-issue>
+
 <issue-list></issue-list>
-
-
