add multi component refreshing

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -5,6 +5,6 @@
 
 <router-outlet></router-outlet>
 
-<add-issue></add-issue>
+<add-issue (onIssueAdded)="onIssueAdded()"></add-issue>
 
-<issue-list></issue-list>
+<issue-list [reloadIssues]="reloadIssues"></issue-list>
