refactor component refreshing logic

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -5,6 +5,6 @@
 
 <router-outlet></router-outlet>
 
-<add-issue (onIssueAdded)="onIssueAdded()"></add-issue>
+<add-issue (onIssueAdded)="onIssueAdded($event)"></add-issue>
 
 <issue-list [reloadIssues]="reloadIssues"></issue-list>
