adding edit request

--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -3,7 +3,7 @@
 
     <input [(ngModel)]="issue.name" placeholder="name">
     <input [(ngModel)]="issue.description" placeholder="name">
-    <a href="#" (click)="closeEditMode($event)">Modify</a>
+    <a href="#" (click)="modify($event)">Modify</a>
 
   </div>
 
