adding recursive issue generation

--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -17,11 +17,11 @@
       {{issue.description}}
     </div>
 
-    <a href="#" (click)="editIssue($event)">Edit {{issue.id}}</a>
+    <a href="#" (click)="editIssue($event)">Edit</a>
 
     <div *ngIf="issue.child">
       <div class="child-issue">
-        {{issue.child}}
+        <issue [issue]="child"></issue>
       </div>
     </div>
 
