--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -3,6 +3,7 @@
 
     <input [(ngModel)]="issue.name" placeholder="name">
     <input [(ngModel)]="issue.description" placeholder="name">
+    <add-issue [parent]="issue.id"></add-issue>
     <a href="#" (click)="modify($event)">Modify</a>
 
   </div>
@@ -18,8 +19,8 @@
     </div>
 
     <a href="#" (click)="editIssue($event)">Edit</a>
-
-    <div *ngIf="issue.child">
+    
+    <div *ngIf="issue.child && child">
       <div class="child-issue">
         <issue [issue]="child"></issue>
       </div>
