correcting issue ids and handling zero issue id everywhere

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,4 +1,4 @@
 <h1>Add issue</h1>
-<add-issue (onIssueAdded)="onIssueAdded($event)"></add-issue>
+<add-issue (addIssueOutput)="onIssueAdded($event)"></add-issue>
 
 <issue-list [reloadIssues]="reloadIssues"></issue-list>
