--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -3,7 +3,7 @@
 
     <input [(ngModel)]="issue.name" placeholder="name">
     <input [(ngModel)]="issue.description" placeholder="name">
-    <add-issue [parentIssue]="issue.id"></add-issue>
+    <add-issue [parentIssue]="issue.id" (addIssueOutput)="onIssueAdded($event)"></add-issue>
     <a href="#" (click)="modify($event)">Modify</a>
 
   </div>
