adding subissue refreshing

--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -22,7 +22,7 @@
     
     <div *ngIf="issue.child && child">
       <div class="child-issue">
-        <issue [issue]="child"></issue>
+        <issue [issue]="child" (issueOutput)="onIssue($event)"></issue>
       </div>
     </div>
 
