--- a/src/app/app-component/app.component.css
+++ b/src/app/app-component/app.component.css
@@ -1,7 +1,7 @@
 .app {
     margin: auto;
     padding: 30px 30px;
-    width: 600px;
+    max-width: 900px;
     margin-top: 54px;
     background-color: #ffe6cc;
     box-shadow: 12px 15px 37px #888888;
