--- a/src/app/add-issue/add-issue.component.css
+++ b/src/app/add-issue/add-issue.component.css
@@ -6,7 +6,33 @@ input[type="text"] {
   outline: none;
   font-size: 14px;
 }
+
 input[type="text"]:focus,
 input[type="text"].focus {
   border-bottom: solid 2px #969696;
+}
+
+.sub-issue {
+  display: block;
+}
+
+button {
+    color: #333;
+    background-color: #ffcc99;
+    border-color: #ffcc99;
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: 4px 5px 14px #888888;
 }
